EmailServiceAssignment/src/objects/Loan__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApplicantEmail__c</fullName>
        <label>Applicant Email</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ApplicantName__c</fullName>
        <label>Applicant Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <label>Manager</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Loan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Loan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>